lib/japanese_phoneme_converter_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/jpn_to_phoneme_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class JapanesePhonemeConverterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  JapanesePhonemeConverterBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  JapanesePhonemeConverterBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// @brief Initialize the phoneme converter with a JSON dictionary file
  ///
  /// @param json_file_path Path to the ja_phonemes.json file (UTF-8 encoded)
  /// @return 1 on success, 0 on failure
  int jpn_phoneme_init(ffi.Pointer<ffi.Char> json_file_path) {
    return _jpn_phoneme_init(json_file_path);
  }

  late final _jpn_phoneme_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'jpn_phoneme_init',
      );
  late final _jpn_phoneme_init = _jpn_phoneme_initPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief Initialize the phoneme converter from memory-mapped .trie data
  ///
  /// @param trie_data Pointer to the binary .trie data in memory
  /// @param data_size Size of the trie data in bytes
  /// @return 1 on success, 0 on failure
  int jpn_phoneme_init_from_memory(
    ffi.Pointer<ffi.Uint8> trie_data,
    int data_size,
  ) {
    return _jpn_phoneme_init_from_memory(trie_data, data_size);
  }

  late final _jpn_phoneme_init_from_memoryPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('jpn_phoneme_init_from_memory');
  late final _jpn_phoneme_init_from_memory = _jpn_phoneme_init_from_memoryPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// @brief Convert Japanese text to IPA phonemes
  ///
  /// @param japanese_text Input Japanese text (UTF-8 encoded, null-terminated)
  /// @param output_buffer Buffer to store the resulting phonemes (UTF-8 encoded)
  /// @param buffer_size Size of the output buffer in bytes
  /// @param processing_time_us Pointer to store processing time in microseconds (can be NULL)
  /// @return Number of bytes written to output_buffer, or -1 on error
  int jpn_phoneme_convert(
    ffi.Pointer<ffi.Char> japanese_text,
    ffi.Pointer<ffi.Uint8> output_buffer,
    int buffer_size,
    ffi.Pointer<ffi.Int64> processing_time_us,
  ) {
    return _jpn_phoneme_convert(
      japanese_text,
      output_buffer,
      buffer_size,
      processing_time_us,
    );
  }

  late final _jpn_phoneme_convertPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('jpn_phoneme_convert');
  late final _jpn_phoneme_convert = _jpn_phoneme_convertPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int64>,
        )
      >();

  /// @brief Get the last error message
  ///
  /// @return Error message string (never NULL, empty string if no error)
  ffi.Pointer<ffi.Char> jpn_phoneme_get_error() {
    return _jpn_phoneme_get_error();
  }

  late final _jpn_phoneme_get_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'jpn_phoneme_get_error',
      );
  late final _jpn_phoneme_get_error = _jpn_phoneme_get_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// @brief Get the number of entries in the phoneme dictionary
  ///
  /// @return Number of entries, or -1 if not initialized
  int jpn_phoneme_get_entry_count() {
    return _jpn_phoneme_get_entry_count();
  }

  late final _jpn_phoneme_get_entry_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'jpn_phoneme_get_entry_count',
      );
  late final _jpn_phoneme_get_entry_count = _jpn_phoneme_get_entry_countPtr
      .asFunction<int Function()>();

  /// @brief Get the library version string
  ///
  /// @return Version string (e.g., "2.0.0")
  ffi.Pointer<ffi.Char> jpn_phoneme_version() {
    return _jpn_phoneme_version();
  }

  late final _jpn_phoneme_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'jpn_phoneme_version',
      );
  late final _jpn_phoneme_version = _jpn_phoneme_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// @brief Initialize the word dictionary for segmentation
  ///
  /// @param word_file_path Path to the word list file (e.g., "ja_words.txt")
  /// @return 1 on success, 0 on failure
  int jpn_phoneme_init_word_dict(ffi.Pointer<ffi.Char> word_file_path) {
    return _jpn_phoneme_init_word_dict(word_file_path);
  }

  late final _jpn_phoneme_init_word_dictPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'jpn_phoneme_init_word_dict',
      );
  late final _jpn_phoneme_init_word_dict = _jpn_phoneme_init_word_dictPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief Enable or disable word segmentation
  ///
  /// @param enabled true to enable segmentation, false to disable
  void jpn_phoneme_set_use_segmentation(bool enabled) {
    return _jpn_phoneme_set_use_segmentation(enabled);
  }

  late final _jpn_phoneme_set_use_segmentationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'jpn_phoneme_set_use_segmentation',
      );
  late final _jpn_phoneme_set_use_segmentation =
      _jpn_phoneme_set_use_segmentationPtr.asFunction<void Function(bool)>();

  /// @brief Check if word segmentation is enabled
  ///
  /// @return true if segmentation is enabled, false otherwise
  bool jpn_phoneme_get_use_segmentation() {
    return _jpn_phoneme_get_use_segmentation();
  }

  late final _jpn_phoneme_get_use_segmentationPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'jpn_phoneme_get_use_segmentation',
      );
  late final _jpn_phoneme_get_use_segmentation =
      _jpn_phoneme_get_use_segmentationPtr.asFunction<bool Function()>();

  /// @brief Get the number of words in the word dictionary
  ///
  /// @return Number of words loaded, or -1 if no dictionary loaded
  int jpn_phoneme_get_word_count() {
    return _jpn_phoneme_get_word_count();
  }

  late final _jpn_phoneme_get_word_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'jpn_phoneme_get_word_count',
      );
  late final _jpn_phoneme_get_word_count = _jpn_phoneme_get_word_countPtr
      .asFunction<int Function()>();

  /// @brief Clean up all resources used by the converter
  void jpn_phoneme_cleanup() {
    return _jpn_phoneme_cleanup();
  }

  late final _jpn_phoneme_cleanupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('jpn_phoneme_cleanup');
  late final _jpn_phoneme_cleanup = _jpn_phoneme_cleanupPtr
      .asFunction<void Function()>();
}
